# weft

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  index.html  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/assets/: README.md
.github/workflows/: release.yml
contrib/install-lock/: README.md  _common.sh  bun-install.sh  cargo-fetch.sh  npm-ci.sh  pnpm-install.sh
docs/: agents.md  architecture.md  cli.md  data.md  development.md  integrations.md  roadmap.md  shortcuts.md  themes.md
src/: App.tsx  index.css  main.tsx  query.ts  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_schema.sql  0003_agent_presets.sql  0004_task_tickets_and_branch.sql  0005_project_links.sql  0006_initial_prompt.sql  0007_claude_preset_prompt_arg.sql  0008_claude_preset_prompt_before_addir.sql  0009_task_context_shared.sql  0010_task_name_locked_at.sql  0011_terminal_tabs.sql  0012_agent_sessions_and_resume.sql
src-tauri/src/: debug.rs  lib.rs  main.rs  menu.rs  task.rs
src-tauri/src/commands/: changes.rs  devlog.rs  fonts.rs  git.rs  integrations.rs  mod.rs  prefs.rs  presets.rs  project_links.rs  projects.rs  settings.rs  tasks.rs  terminal.rs  workspaces.rs
src-tauri/src/db/: events.rs  mod.rs
src-tauri/src/db/repo/: mod.rs  preset.rs  project.rs  project_link.rs  task.rs  task_session.rs  task_ticket.rs  task_worktree.rs  terminal_tab.rs  tests.rs  workspace.rs
src-tauri/src/git/: commit.rs  mod.rs  repo.rs  status.rs  worktree.rs
src-tauri/src/hooks/: events.rs  install_lock.rs  mod.rs  server.rs  status.rs
src-tauri/src/integrations/: keychain.rs  linear.rs  mod.rs  store.rs
src-tauri/src/model/: mod.rs  project.rs  task.rs  workspace.rs
src-tauri/src/services/: agent_launch.rs  fonts.rs  mod.rs  open_in_editor.rs  project_link_presets.rs  project_links_health.rs  project_links_reapply.rs  reconcile.rs  task_context.rs  task_create.rs  task_naming.rs  task_repos.rs  task_tickets.rs  worktree_links.rs
src-tauri/src/terminal/: command_resolve.rs  manager.rs  mod.rs  recorder.rs  session.rs
src/components/: AboutDialog.tsx  AddProjectDialog.tsx  AddRepoToTaskDialog.tsx  ChangesPanel.tsx  CommandPalette.tsx  ConfirmDialog.tsx  DiffViewer.tsx  ErrorBoundary.tsx  Home.tsx  HomeBacklogStrip.tsx  InlineTaskRename.tsx  NewTabPicker.tsx  Onboarding.tsx  ProjectBadge.tsx  ProjectView.tsx  QuitConfirmDialog.tsx  RecentTasksPalette.tsx  Shell.tsx  ShortcutsOverlay.tsx  Sidebar.tsx  TaskComposeCard.tsx  TaskComposeOverlay.tsx  TaskPanelPool.tsx  Terminal.tsx  TerminalPreview.tsx  TerminalTabStrip.tsx  TicketPicker.tsx  Toolbar.tsx
src/lib/: active-route.ts  colors.ts  commands.ts  (+13 more)
(+45 files in other folders)
